--- a/admin/css/thin-ui.css
+++ b/admin/css/thin-ui.css
@@ -134,6 +134,7 @@ a:hover {
 .thin-ui-notification {
     background-color: #FFFFFF;
     padding: 12px;
+    margin: 0 0 8px 0;
     border-radius: 2px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
