--- a/admin/css/thin-ui.css
+++ b/admin/css/thin-ui.css
@@ -21,6 +21,22 @@ a:hover {
     text-decoration: underline;
 }
 
+.thin-ui {}
+
+.thin-ui-infobox {
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+    margin: 0 0 8px 0;
+    padding: 24px;
+}
+.thin-ui-infobox h3 {
+    margin: 0;
+    padding: 0 0 16px 0;
+    font-weight: 400;
+}
+
+
 .thin-ui-input {
     background-color: #FFFFFF;
     line-height: normal;
@@ -138,11 +154,20 @@ a:hover {
     border-radius: 2px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
+.thin-ui-notification b {
+    font-weight: 500;
+}
+
 .thin-ui-notification-success {
     border-left: 3px solid #2ECC71;
 }
 .thin-ui-notification-error {
     border-left: 3px solid #E74C3C;
+}
+.thin-ui-notification-info {
+    border-left: 3px solid #8E44AD;
+    background-color: rgba(142, 68, 173, 0.5);
+    color: #FFFFFF;
 }
 
 .table-media td img {
