--- a/admin/css/custom.css
+++ b/admin/css/custom.css
@@ -315,11 +315,13 @@ table td {
     box-sizing: border-box;
 }
 
+/**
 html,
 body {
     width: 100%;
     height: 100%;
 }
+/**/
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -484,4 +486,24 @@ h1 {
     font-weight: 400;
     color: #BDC3C7;
     vertical-align: super;
+}
+
+
+
+.hound-installation-container {
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+    margin: 8% auto;
+    padding: 24px;
+    max-width: 720px;
+}
+.hound-installation-container h1 {
+    margin: 0;
+    padding: 0 0 16px 0;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.65);
+}
+.hound-installation-container p {
+    padding: 0 0 16px 0;
 }
