--- a/admin/css/thin-ui.css
+++ b/admin/css/thin-ui.css
@@ -48,6 +48,22 @@ a:hover {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, .07);
     padding: 8px;
 }
+.thin-ui-textarea {
+    width: 100%;
+    background-color: #FFFFFF;
+    line-height: normal;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 14px;
+    border: 1px solid #DDDDDD;
+    border-radius: 0;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .07);
+    padding: 8px;
+}
+.thin-ui-textarea-code {
+    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+    font-size: 12px;
+}
 
 .thin-ui-select-wrapper select {
   font-family: inherit;
