--- a/content/site/templates/grey/style.css
+++ b/content/site/templates/grey/style.css
@@ -45,7 +45,6 @@ footer,
 .page-wrapper-full img {
     max-width: 80%;
     height: auto;
-    margin: 0 auto;
     display: block;
     border-radius: 2px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -84,16 +83,19 @@ ul.menu li a:hover {
     font-weight: 500;
     text-decoration: none;
 }
-.logo .tagline {
-    color: #AAAAAA;
-    color: rgba(0, 0, 0, 0.44);
-    font-weight: 400;
-    font-size: 14px;
-}
 
 footer {
     font-size: 13px;
 }
 .grey-copyright {
     text-align: center;
+}
+
+@media screen and (max-width: 720px) {
+    header,
+    footer,
+    ul.menu,
+    .page-wrapper {
+        width: 100%;
+    }
 }
