--- a/content/site/templates/grey/style.css
+++ b/content/site/templates/grey/style.css
@@ -1,3 +1,5 @@
+* { box-sizing: border-box; }
+
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
@@ -69,6 +71,17 @@ ul.menu li a {
     font-size: 14px;
     font-weight: 400;
     text-decoration: none;
+}
+
+@media screen and (max-width: 480px) {
+    ul.menu li {
+        display: block;
+    }
+    ul.menu li a {
+        width: 100%;
+        display: block;
+        padding: 8px;
+    }
 }
 
 ul.menu li a:hover {
