--- a/content/site/templates/grey/style.css
+++ b/content/site/templates/grey/style.css
@@ -44,8 +44,9 @@ footer,
     color: rgba(0, 0, 0, 0.8);
     letter-spacing: -.028em;
 }
+.page-wrapper img,
 .page-wrapper-full img {
-    max-width: 80%;
+    max-width: 100%;
     height: auto;
     display: block;
     border-radius: 2px;
